Fixed spacing

--- a/_sass/_project-preview.scss
+++ b/_sass/_project-preview.scss
@@ -22,7 +22,7 @@
     margin: 0;
 }
 
-.project-description {
+.title-description p {
     margin: 0;
 }
 
